# ParallelQuickSort

./: CMakeLists.txt  README.md  main.c
